--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -105,7 +105,7 @@ a:focus {
 
 .main {
   display: flex;
-  max-width: 1280px;
+  max-width: 80rem;
   margin-inline: auto;
   flex-direction: column;
   gap: var(--space-xl);
@@ -154,12 +154,18 @@ a:focus {
 
 .page img {
   width: auto;
+  height: auto;
+  max-width: calc(100vw - var(--space-xl));
   max-height: calc(100vh - var(--space-xl));
 }
 @media (min-width: 60rem) {
   .page img {
-    width: auto;
-    max-height: calc(100vh - var(--space-xl));
+    max-width: calc(50vw - var(--space-xl));
+  }
+}
+@media (min-width: 80rem) {
+  .page img {
+    max-width: calc(40rem - var(--space-xl));
   }
 }
 
